# Stage-2.0

./: .gitignore  planning.2.0.txt  routput.txt
data/: .gitignore  compare.sh
data/simulated/: baakman_1_90.txt  ferdosi_1_90.txt  ferdosi_2_60.txt
mathematica/: epanechnikov.nb  epanechnikov2.nb  scalingFactor.nb
mathematicamatlab/: epanechnikov.nb  plotEigenEllipse.m  useKDTreeForEpanechnikovKernel.m
paper/: 0_abstract.tex  1_introduction.tex  2_method.tex  3_artificial.tex  3_datasets.tex  3_simulated.tex  4_results.tex  5_discussion.tex  biblio.bib  conclusion.tex  legend.sty  paper.tex  stage.sty  stagePaper.sublime-project  variables.sty
paper/3/: datasets.tex  datasets_subfigs.tex  datasets_table.tex  errorMeasures.tex  main.tex  simulated.tex  simulated_subfigs.tex  simulated_table.tex
paper/4/: main.tex  mse.tex  mse_table.tex  plots.tex  plots_multiSphere.tex  plots_multiSphere_subfigs.tex  plots_singleSphere.tex  (+6 more)
paraview/: DensitiesColorMap.json  DifferenceColorMap.json  difference in num used patterns.pvsm  eigenVectorsImages.pvsm  explore.pwin  screenshot.pwin  xisResults.pvsm  xsResults.pvsm
results/: .gitignore
src/: argparseActions.py  benchmark.py  benchmark_main.c  comparePerformance.py  convertimages.py  experiment.py  generatesimulateddata.py  globalConfigParameters.py  makefile  paraview.py  parzenMain.py  requirements.txt  run_c_tests.sh  setup_globals.py  stageC.sublime-project  stagePython.sublime-project  temp.py  test_main.c  test_main.py  test_utils.c  test_utils.h
src/kde/: CMakeLists.txt  __init__.py  automaticWindowWidthMethods.py  breiman.c  breiman.h  datavalidation.py  estimator.py  estimatorimplementation.py  kde.c  kde.h  kde.sh  kdeModule.c  kdeModule.h  mbe.c  mbe.h  mbe.ih  mbe.py  modifeidbreiman.c  modifeidbreiman.h  modifeidbreiman.py  parzen.c  parzen.h  parzen.ih  parzen.py  parzen_old.py  sambe.c  sambe.h  sambe.ih  sambe.py  setup.py  setup_globals.py  shapeAdaptiveMBE.py  shapeadaptivembe.py  utils.c  utils.h  utils.ih  windowWidthMethods.py
src/kde/kernels/: CMakeLists.txt  __init__.py  densityFunctions.c  densityFunctions.h  densityFunctions.ih  epanechnikov.c  epanechnikov.h  epanechnikov.ih  epanechnikov.py  epanecnikov.py  gaussian.c  gaussian.h  gaussian.ih  gaussian.py  kernel.py  kernels.c  kernels.h  kernels.ih  kernels.sh  kernelsModule.c  kernelsModule.h  scaling.py  setup.py  shapeadaptiveepanechnikov.py  shapeadaptivegaussian.py  standardGaussian.c  standardGaussian.c.c  standardGaussian.c.h  standardGaussian.h  standardGaussian.py  standardGaussian_new.py  standardgaussian.py  standardgaussian_new.py  testKernel.py  testkernel.c  testkernel.h  testkernel.ih
src/kde/kernels/tests/: test_epanechnikov.c  test_epanechnikov.h  test_epanechnikov.m  test_epanechnikov.py  test_gaussian.c  test_gaussian.h  test_gaussian.py  test_kernels.c  test_kernels.h  test_scaling_factor.m  test_scaling_factor.py  test_shapeAdaptiveEpanechnikov.py  test_shapeAdaptiveKernel.py  test_shapeadaptiveapanechnikov.m  test_shapeadaptivegaussian.m  test_shapeadaptivegaussian.py  test_standardGaussian.py  test_testKernel.py
src/kde/tests/: CuTest.c  CuTest.h  CuTestUtils.c  CuTestUtils.h  makefile  print_gsl_matrix.m  test__MBEstimator.py  test_automaticWindowWidthMethods.py  test_constants.h  test_estimator.py  test_estimatorDataValidator.py  test_kde.c  test_kde.h  test_main.c  test_mbe.c  test_mbe.h  test_mbe.m  test_mbe.py  test_modifiedBreiman.py  test_modifiedBreimanEstimator.py  test_modifiedBreiman_old.py  test_parzen.c  test_parzen.h  test_parzen.m  test_parzen.py  test_parzenEstimator.py  test_parzen_old.py  test_sambe.c  test_sambe.h  test_sambe.m  test_sambe.py  test_sambe2.m  test_sambe_C.m  test_sambe_python.m  test_shapeadaptivembe.m  test_shapeadaptivembe.py
src/kde/utils/: __init__.py  automaticWindowWidthMethods.py  covariance.py  covariancematrix.c  covariancematrix.h  covariancematrix.ih  distanceMatrix.py  distancematrix.c  distancematrix.h  distancematrix.ih  eigenvalues.c  eigenvalues.cpp  eigenvalues.h  eigenvalues.py  eigenvaluesvectors.py  geometricmean.c  geometricmean.h  grid.py  gsl_utils.c  gsl_utils.h  knn.c  knn.h  knn.ih  knn.py  setup.py  utils.sh  utilsModule.c  utilsModule.h
src/kde/utils/tests/: test_KNN.py  test_automaticWindowWidthMethods.py  test_compute_distance_matrix.py  test_covariance.py  test_eig.py  test_eigenvalues.c  test_eigenvalues.h  test_geometric_mean.py  test_grid.py  test_gsl_utils.c  test_gsl_utils.h  test_knn.c  test_knn.h  test_utils.c  test_utils.h
visualisation/: .RData  .Rhistory  createDifferencePlots.R  datasets.R  differencePlot.R  explore.R  globals.R  header.R  header.r  io.R  results.R  scatterplot3d.R  stageVisualisatie.sublime-project  utils.R
(+667 files in other folders)
